Fixes for WebVR API fallback on Firefox Nightly

--- a/examples/style.css
+++ b/examples/style.css
@@ -90,7 +90,7 @@ button[type=button] {
 }
 
 #frontBuffer {
-  position: fixed;
+  position: absolute;
   width: 100%;
   top: 0;
   left: 0;
